// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should successfully create a scale viewer component 1`] = `
<div
  aria-label="regionLabel"
  class="scale-viewer"
  data-testid="scale-viewer"
  role="region"
>
  <span
    aria-atomic="true"
    aria-live="polite"
    class="css-cfk6a1"
  >
    scaleLabel
  </span>
  <p
    aria-hidden="true"
  >
    1:
    336,409
  </p>
</div>
`;

exports[`should successfully create a scale viewer component with additional css classes and box properties 1`] = `
<div
  aria-label="regionLabel"
  class="scale-viewer test test1 test2"
  data-testid="scale-viewer"
  role="region"
>
  <span
    aria-atomic="true"
    aria-live="polite"
    class="css-cfk6a1"
  >
    scaleLabel
  </span>
  <p
    aria-hidden="true"
  >
    1:
    336,409
  </p>
</div>
`;
